--- a/apps/server/.env.template
+++ b/apps/server/.env.template
@@ -2,4 +2,9 @@ MONGO_HOST=localhost
 MONGO_PORT=27017
 MONGO_DB=test
 
+REDIS_URL=redis://default:jiang666@localhost:6379/
+
 CORS_ALLOW_ORIGIN="http://localhost:3000;http://localhost:8080"
+
+JWT_SECRET=jiang666
+JWT_EXPIRES_IN=180h
