--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -11,8 +11,13 @@
   "dependencies": {
     "@koa/cors": "^4.0.0",
     "@koa/router": "^11.0.2",
+    "@polkadot/util": "^12.5.1",
+    "@polkadot/util-crypto": "^12.5.1",
+    "@types/koa-bodyparser": "^4.3.11",
     "dotenv": "^16.3.1",
+    "jsonwebtoken": "^9.0.2",
     "koa": "^2.14.2",
+    "koa-bodyparser": "^4.4.1",
     "koa-mongo": "^1.9.3",
     "koa-session": "^6.4.0"
   },
@@ -20,6 +25,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.4",
     "@types/koa": "^2.13.10",
     "@types/koa-mongo": "^1.9.6",
     "@types/koa__cors": "^4.0.2",
