chore: config jest add test case for login and password api

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,3 +18,9 @@ services:
       - 8081:8081
     depends_on:
       - mongo
+
+  # redis:
+  #   image: redis
+  #   command: redis-server --requirepass jiang666
+  #   ports:
+  #     - "6379:6379"
