--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -16,8 +16,11 @@
   "license": "ISC",
   "dependencies": {
     "@polkadot/extension-dapp": "^0.46.5",
+    "@polkadot/extension-inject": "^0.46.5",
     "axios": "^1.5.1",
+    "classnames": "^2.3.2",
     "next": "^13.5.6",
+    "rc-dialog": "^9.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
