--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.5.1",
     "@types/jest": "^29.5.6",
     "@types/node": "20.8.7",
     "@types/react": "18.2.31",
@@ -37,6 +38,7 @@
     "eslint-config-next": "13.5.6",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "next-router-mock": "^0.9.10",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3",
     "typescript": "5.2.2"
