feat: update github actions

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.ts",
+    "start": "pnpm build && node dist/index.js",
     "build": "tsc",
     "lint": "tsc --noEmit"
   },
