--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Public Test Admin
+name: Deploy
 
 on:
   workflow_dispatch:
@@ -10,8 +10,12 @@ on:
         type: choice
         options:
           - engineer
-          - staging
-          - sandbox
+          - test
+          - prod
+env:
+  IMAGE_TAG: ${{ github.sha }}.${{ github.event.inputs.enviroment || 'production' }}
+  REPO_NAME: ${{ github.event.repository.name }}
+  DEPLOY_TARGET: ${{ github.event.inputs.enviroment || 'production' }}
 jobs:
   PullSource:
     runs-on: ubuntu-latest
@@ -20,21 +24,14 @@ jobs:
       - name: Pull source
         uses: appleboy/ssh-action@v0.1.6
         with:
-          host: "123.249.115.108"
+          host: "47.95.212.169"
           username: root
           key: ${{ secrets.ACCESS_TOKEN }}
           script: |
-            cd /root/source/react-arco-admin
+            cd ~/deploy/password-app
             git checkout .
             git pull
             pnpm i
-            cd /root/source/react-arco-admin/packages/server
+            cd ~/deploy/password/apps/server
             pnpm build
             pm2 restart server
-            cd /root/source/react-arco-admin/packages/admin
-            pnpm build
-            cd /root/source/react-arco-admin/packages/cms
-            pnpm build
-            pm2 restart cms
-            cd /root/source/react-arco-admin/packages/ui
-            pnpm build
