--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.ts",
-    "start": "pnpm build && node dist/index.js",
+    "start": "pnpm stop; pnpm build && pm2 start dist/index.js -i max --name server",
+    "stop": "pm2 stop server && pm2 delete server",
     "build": "tsc",
     "lint": "tsc --noEmit"
   },
@@ -20,7 +21,8 @@
     "koa": "^2.14.2",
     "koa-bodyparser": "^4.4.1",
     "koa-mongo": "^1.9.3",
-    "koa-session": "^6.4.0"
+    "koa-session": "^6.4.0",
+    "pm2": "^5.3.0"
   },
   "keywords": [],
   "author": "",
