--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,7 @@ jobs:
             cd ~/deploy/password-app
             git checkout .
             git pull
+            npm i -g pnpm
             pnpm i
             cd ~/deploy/password/apps/server
             pnpm start
