--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.ts",
-    "start": "pnpm stop; pnpm build && pm2 start dist/index.js -i max --name server",
+    "start": "pnpm stop; pnpm build && pm2 start dist/index.js --name server",
     "stop": "pm2 stop server && pm2 delete server",
     "build": "tsc",
     "lint": "tsc --noEmit"
